w3d3 ajax fixed up css on table forcing word wrap to keep in cell

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -58,6 +58,8 @@ article span {
 
 article table {
     height : 100px;
+    table-layout: fixed;
+    width: 100%;
 }
 
 article td {
@@ -65,6 +67,7 @@ article td {
   vertical-align: middle;
   height : 100px;
   padding:5px;
+  word-wrap: break-word;
 }
 
 article footer span  {
